--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,5 @@
 version 1.00.1:
+	Fix gremlin stolen rocket launcher fire causing crash to console.
 	Fix mace to use bloodcrystals ammo when siphoning health from hit enemies.
 	Fix mace to siphon health from lunges.  Was previously only if on ground.
 	Fix Thor's Blessing to not have player get stuck in the ground.
